<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/show_master_list"
        android:orderInCategory="100"
        android:title="@string/show_master_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_shopping_list"
        android:orderInCategory="200"
        android:title="@string/show_shopping_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_item"
        android:orderInCategory="300"
        android:title="@string/add_item"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_all"
        android:orderInCategory="400"
        android:title="@string/clear_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_checked"
        android:orderInCategory="400"
        android:title="@string/delete_checked"
        app:showAsAction="never" />

</menu>